# aimo-api

./: .env.sample  README.md  client.py  database.py  pyproject.toml  server.py  settings.py  wsgi.py
api/: app.py  endpoints.py  models.py  serializers.py
auth/: endpoints.py  serializers.py
templates/: index.html
utils/: exceptions.py  jwt_auth.py  models.py  request.py  response.py  settings.py
